--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2024.8.30
 click==8.1.7
 distro==1.9.0
 Flask==3.1.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
@@ -14,6 +15,7 @@ Jinja2==3.1.4
 jiter==0.8.0
 MarkupSafe==3.0.2
 openai==1.55.2
+packaging==24.2
 pydantic==2.10.2
 pydantic_core==2.27.1
 python-dotenv==1.0.1
