--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+bcrypt==4.2.1
 blinker==1.9.0
 certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 distro==1.9.0
 Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
 gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
@@ -19,7 +23,9 @@ packaging==24.2
 pydantic==2.10.2
 pydantic_core==2.27.1
 python-dotenv==1.0.1
+requests==2.32.3
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
+urllib3==2.2.3
 Werkzeug==3.1.3
